feat: changed colors.xml and strings.xml

--- a/Breaking/app/src/main/res/values/strings.xml
+++ b/Breaking/app/src/main/res/values/strings.xml
@@ -5,13 +5,18 @@
     <string name="sign_up_nickname_text">닉네임</string>
     <string name="sign_up_phone_number_text">전화번호</string>
     <string name="sign_up_state_message_title">상태 메시지(선택)</string>
-    <string name="sign_up_state_message_hint">상태 메시지(최대 200자)</string>
+    <string name="sign_up_state_message_hint">상태 메시지(최대 60자)</string>
     <string name="sign_up_user_type_title">회원 유형</string>
     <string name="sign_up_user_type_default_btn">일반인</string>
     <string name="sign_up_user_type_other_btn">언론인</string>
     <string name="sign_up_email_title">이메일</string>
     <string name="sign_up">회원가입</string>
     <string name="sign_up_name">이름</string>
+    <string name="sign_up_error_used_nickname_text">중복된 닉네임입니다.</string>
+    <string name="sign_up_error_invalid_phone_number_text">유효하지 않은 전화번호입니다.</string>
+    <string name="sign_up_error_used_phone_number_text">이미 사용 중인 전화번호입니다.</string>
+    <string name="sign_up_error_invalid_email_text">유효하지 않은 이메일입니다.</string>
+    <string name="sign_up_error_used_email_text">이미 사용 중인 이메일입니다.</string>
     <string name="splash_text">모두가 기자가 된다</string>
     <string name="sign_in_text_title">Breaking을 통해 지금 바로 제보하세요.</string>
     <string name="sign_in_btn_kakao">카카오톡으로 로그인하기</string>
