--- a/Breaking/app/src/main/res/values/strings.xml
+++ b/Breaking/app/src/main/res/values/strings.xml
@@ -11,11 +11,16 @@
     <string name="sign_up_email_title">이메일</string>
     <string name="sign_up">회원가입</string>
     <string name="sign_up_name">이름</string>
+    <string name="sign_up_none_name">이름을 입력해주세요.</string>
     <string name="sign_up_error_used_nickname_text">중복된 닉네임입니다.</string>
+    <string name="sign_up_error_invalid_nickname_text">2~10자의 영문, 한글, 숫자만 입력해주시기 바랍니다.</string>
+    <string name="sign_up_none_nickname_text">닉네임을 입력해주세요.</string>
     <string name="sign_up_error_invalid_phone_number_text">유효하지 않은 전화번호입니다.</string>
     <string name="sign_up_error_used_phone_number_text">이미 사용 중인 전화번호입니다.</string>
+    <string name="sign_up_none_phone_number_text">전화번호를 입력해주세요.</string>
     <string name="sign_up_error_invalid_email_text">유효하지 않은 이메일입니다.</string>
     <string name="sign_up_error_used_email_text">이미 사용 중인 이메일입니다.</string>
+    <string name="sign_up_none_email_text">이메일을 입력해주세요.</string>
     <string name="splash_text">모두가 기자가 된다</string>
     <string name="sign_in_text_title">Breaking을 통해 지금 바로 제보하세요.</string>
     <string name="sign_in_btn_kakao">카카오톡으로 로그인하기</string>
