--- a/Breaking/app/src/main/res/values/strings.xml
+++ b/Breaking/app/src/main/res/values/strings.xml
@@ -25,4 +25,16 @@
     <string name="sign_in_text_title">Breaking을 통해 지금 바로 제보하세요.</string>
     <string name="sign_in_btn_kakao">카카오톡으로 로그인하기</string>
     <string name="sign_in_btn_google">구글로 로그인하기</string>
+    <string name="bottom_menu_breaking_chart">차트</string>
+    <string name="bottom_menu_breaking_mission">미션</string>
+    <string name="bottom_menu_breaking_home">홈</string>
+    <string name="bottom_menu_breaking_chat">채팅</string>
+    <string name="bottom_menu_breaking_user">유저</string>
+    <string name="drawer_menu_breaking_point">포인트</string>
+    <string name="drawer_menu_breaking_bookmark">북마크</string>
+    <string name="drawer_menu_breaking_cart">구매한 제보</string>
+    <string name="drawer_menu_breaking_profile">프로필 편집</string>
+    <string name="drawer_menu_breaking_setting">설정</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
