style: modify user fragment

--- a/Breaking/app/src/main/res/values/strings.xml
+++ b/Breaking/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="drawer_menu_breaking_cart">구매한 제보</string>
     <string name="drawer_menu_breaking_profile">프로필 편집</string>
     <string name="drawer_menu_breaking_setting">설정</string>
-    <string name="edit_profile">프로필 편집하기</string>
+    <string name="edit_profile">프로필 편집</string>
     <string name="nickname">닉네임</string>
     <string name="status_msg">상태 메세지</string>
     <string name="follow">팔로우</string>
