--- a/Breaking/app/src/main/res/values/strings.xml
+++ b/Breaking/app/src/main/res/values/strings.xml
@@ -55,4 +55,5 @@
     <string name="post_register_profile_type_public">공개</string>
     <string name="post_register_profile_type_secret">비공개</string>
     <string name="post_register_btn">제보하기</string>
+    <string name="follow_remove">삭제</string>
 </resources>
