--- a/Breaking/app/src/main/res/values/strings.xml
+++ b/Breaking/app/src/main/res/values/strings.xml
@@ -70,6 +70,7 @@
     <string name="post_detail_btn_consumer_list">구매자목록</string>
     <string name="post_detail_add_comment_hint">댓글 추가</string>
     <string name="post_detail_add_comment">등록</string>
+    <string name="post_detail_tool_bar_modify">수정</string>
     <string name="order_latest">최신순</string>
     <string name="order_like">좋아요순</string>
     <string name="order_view">조회수순</string>
