--- a/Breaking/app/src/main/res/values/strings.xml
+++ b/Breaking/app/src/main/res/values/strings.xml
@@ -71,6 +71,7 @@
     <string name="post_detail_add_comment_hint">댓글 추가</string>
     <string name="post_detail_add_comment">등록</string>
     <string name="post_detail_tool_bar_modify">수정</string>
+    <string name="post_detail_comment_default">작성된 댓글이 없습니다.</string>
     <string name="order_latest">최신순</string>
     <string name="order_like">좋아요순</string>
     <string name="order_view">조회수순</string>
