--- a/Breaking/app/src/main/res/values/strings.xml
+++ b/Breaking/app/src/main/res/values/strings.xml
@@ -100,4 +100,16 @@
     <string name="hashtag_alert">해시태그 검색 시 맨 앞에 #을 붙여주세요. ex) #해시태그</string>
     <string name="user_alert">유저 검색 시 맨 앞에 @을 붙여주세요. ex) @홍길동</string>
     <string name="no_search_result">검색결과 없음</string>
+    <string name="no_transaction_list">입출금 내역이 없습니다.</string>
+    <string name="transaction">거래</string>
+    <string name="balance">보유 금액</string>
+    <string name="log_out">로그아웃</string>
+    <string name="account">계정</string>
+    <string name="amount_charge">충전 금액</string>
+    <string name="hint_charge">충전 금액을 입력하세요.</string>
+    <string name="won">원</string>
+    <string name="do_charge">충전하기</string>
+    <string name="do_withdraw">출금하기</string>
+    <string name="hint_withdraw">출금할 금액을 입력하세요.</string>
+    <string name="withdraw_amount">출금 금액</string>
 </resources>
