--- a/Breaking/app/src/main/res/values/strings.xml
+++ b/Breaking/app/src/main/res/values/strings.xml
@@ -61,6 +61,7 @@
     <string name="exclusive_string">단독</string>
     <string name="sold_string">판매완료</string>
     <string name="sold_stop_string">판매중지</string>
+    <string name="sold_hidden_string">숨김</string>
     <string name="vertical_divider_string">|</string>
     <string name="dot_divider">·</string>
     <string name="filter">필터</string>
